Re/Set up Dominion as Django templates React apps (#138)
* Reset Dominion to be on top of Django templates

* Simply asset_manifest + introduce withRoot for UI

* Rename component folder to components

* Remove used deps & components, update package.json

--- a/dominion/templates/_base.html
+++ b/dominion/templates/_base.html
@@ -1,5 +1,5 @@
 {% extends '_base.html' %}
-{% load sass_tags %}
+{% load sass_tags static %}
 
 {% block head_css %}
 {{ block.super }}
@@ -22,11 +22,11 @@
         var imgID = $img.attr('id');
         var imgClass = $img.attr('class');
         var imgURL = $img.attr('src');
-        
+
         jQuery.get(imgURL, function(data) {
           // Get the SVG tag, ignore the rest
           var $svg = jQuery(data).find('svg');
-          
+
           // Add replaced image's ID to the new SVG
           if(typeof imgID !== 'undefined') {
             $svg = $svg.attr('id', imgID);
@@ -35,16 +35,20 @@
           if(typeof imgClass !== 'undefined') {
             $svg = $svg.attr('class', imgClass+' replaced-svg');
           }
-          
+
           // Remove any invalid XML tags as per http://validator.w3.org
           $svg = $svg.removeAttr('xmlns:a');
-          
+
           // Replace image with new SVG
           $img.replaceWith($svg);
-          
+
         }, 'xml');
-        
+
       });
     });
   </script>
+
+  <script src="{% static asset_manifest.runtime %}"></script>
+  <script src="{% static asset_manifest.vendor %}"></script>
+  <script src="{% static asset_manifest.main %}"></script>
 {% endblock %}
