--- a/dominion/templates/homepage.html
+++ b/dominion/templates/homepage.html
@@ -4,77 +4,12 @@
 data about land ownership in South Africa. Compare places using tables and maps,
 download data, and embed charts on your site.{% endblock %}
 
-{% block header_menu %}
-<li><a href="/about">About</a></li>
-<li><a href="/#showcase">Showcase</a></li>
-<li class="social-icons">
-  <a href="https://twitter.com/{{ HURUMAP.twitter }}"><i
-    class="fa fa-twitter fa-lg fa-fw"></i></a>
-  <a href="https://facebook.com/{{ HURUMAP.facebook }}"><i
-    class="fa fa-facebook fa-lg fa-fw"></i></a>
-</li>
-{% endblock header_menu %}
 
-<!-- Empty header content to override top discover banner -->
-{% block header_content %}{% endblock header_content %}
+  {% block header_content %}
+  {% endblock header_content %}
 
 {% block content_container %}
-
-  <div class="clearfix">
-    <div id="slippy-map"></div>
-
-    <!-- Map Explainer; floating discover banner -->
-    <div class="map-explainer-wrapper">
-      <div class="map-explainer">
-        <i class="fa fa-times cross"
-        onclick="javascript:$('.map-explainer-wrapper').css('display', 'none')"></i>
-          <div style="padding-bottom: 2%">
-            <h2 class="font-weight-bold" style="font-size: 2em">
-              Discover the stories behind <br/> our <span style="color: #269a92;">land</span></h2>
-            <hr>
-        </div>
-        <p>{{ HURUMAP.name }} gives journalist and civic activists
-          useful facts and data about land ownership in South Africa</p>
-        <a class="btn btn-primary btn-sm text-uppercase font-weight-light"
-            href="/profiles/country-ZA-south-africa/">
-          EXPLORE SOUTH AFRICA
-          <img class="border-0" src="{% static 'img/icons/blurbs/button-arrow.svg' %}"
-            style="height:15px; width: 18px; box-shadow: none; object-fit: contain;">
-        </a>
-      </div>
-    </div>
-
-    <!--  -->
-    <div class="home-nav text-center section-container bg-color-white">
-      <ul>
-        <li class="section-title-icon"><a href='/about'>
-          <span class="img-bg rounded bg-color-gradient text-white">
-            <img src="{% static 'img/icons/blurbs/idea.svg' %}"/>
-            ABOUT
-          </span>
-        </a></li>
-        <li class="section-title-icon"><a href="javascript:$('.map-explainer-wrapper').css('display', 'none')">
-          <span class="img-bg rounded bg-color-gradient text-white">
-            <img src="{% static 'img/icons/blurbs/map.svg' %}"/>
-            MAP
-          </span>
-        </a></li>
-        <li class="section-title-icon"><a href='#showcase-stories'>
-          <span class="img-bg rounded bg-color-gradient text-white">
-            <img src="{% static 'img/icons/blurbs/script.svg' %}"/>
-            STORIES
-          </span>
-        </a></li>
-        <li class="section-title-icon"><a href='#partners'>
-          <span class="img-bg rounded bg-color-gradient text-white">
-            <img src="{% static 'img/icons/blurbs/group.svg' %}"/>
-            PARTNERS
-          </span>
-        </a></li>
-      </ul>
-    </div>
-  </div>
-  
+  <div id="dominionHomeHero"></div>
   <div class="showcase how-it-works bg-white text-center">
     {% block how_it_works %}
       <div class="wrapper clearfix how-it-works">
