--- a/dominion/templates/_header.html
+++ b/dominion/templates/_header.html
@@ -1,3 +1,3 @@
 {% load staticfiles %}
 
-<div id="dominionHeader"></div>
+<div id="dominionHeader" style="position: absolute; height:100%; width: 100%;"></div>
