[dominion] add header to blocks

--- a/dominion/templates/homepage.html
+++ b/dominion/templates/homepage.html
@@ -5,7 +5,7 @@ data about land ownership in South Africa. Compare places using tables and maps,
 download data, and embed charts on your site.{% endblock %}
 
 {% block header %}
-    {% include '_header.html' %}
+    {% include 'blocks/header.html' %}
 {% endblock header %}
 
 {% block content_container %}
