add portal choose component

--- a/dominion/templates/homepage.html
+++ b/dominion/templates/homepage.html
@@ -20,6 +20,7 @@ download data, and embed charts on your site.{% endblock %}
 
 {% block content_container %}
   <div id="dominionHomeHero"></div>
+  <div id="dominionPortalChooser"></div>
   {% include 'blocks/showcase.html' %}
   <div id="dominionVideo"></div>
   <div id="dominionData"></div>
