Remove border from footer

--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -315,9 +315,15 @@ span.img-bg {
   }
 }
 
+/* LAYOUT */
 
+#page-footer {
+    background: none;
+    border: none;
+}
 
 /* LAYOUT */
+#page-header,
 #page-header .wrapper {
     padding: 0;
 }
