--- a/dominion/templates/_base.html
+++ b/dominion/templates/_base.html
@@ -4,6 +4,10 @@
 {% block head_css %}
 {{ block.super }}
 <link rel="stylesheet" href="{% sass_src 'css/dominion.scss' %}">
+<link
+    href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:200,300,400,500,600,700,800,900"
+    rel="stylesheet"
+/>
 {% endblock %}
 
 {% block body_javascript %}
