[dominion] off-yellow a tag

--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -15,6 +15,10 @@ $brand-color-solid-green: #279c94;
 $brand-color-gray: #b1b1b1;
 $font-raleway: 'Raleway', sans-serif;
 
+a {
+    color: #e7e452;
+}
+
 // Heading font
 h1 {
   font-size: 3em;
