--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -150,6 +150,10 @@ span.img-bg {
 
 // Homepage
 
+#homepage {
+    padding-top: 0;
+}
+
 // Map Explainer; floating box
 .map-explainer-wrapper {
   position: absolute;
