fix search mobile view

--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -341,3 +341,11 @@ span.img-bg {
     }
 }
 
+//wazimap conflicts with search
+input[type="text"] {
+  border: 0;
+  background: none;
+}
+
+::selection {
+  background: none;
