--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -8,35 +8,13 @@
   <div id="dominionCountryHero"></div>
 {% endblock content_container %}
 
-{% block profile_detail %}
-
-  {% include 'settings_js.html' %}
-  {% block body_javascript %}
+{% block body_javascript_extra %}
     {{ block.super }}
-
-    {% block profile_javascript_libs %}
-      <script src="{% static 'js/vendor/leaflet-0.6.4.js' %}"></script>
-      <script src="{% static 'js/vendor/topojson.v1.min.js' %}"></script>
-      <script src="{% static 'js/vendor/leaflet.label.js' %}"></script>
-      <script src="{% static 'js/charts.js' %}"></script>
-      <script src="{% static 'js/head2head.js' %}"></script>
-      <script src="{% static 'js/profile_map_mapit.js' %}"></script>
-      <script src="{% static 'js/map_mapit.js' %}"></script>
-
-          <script>
-            var maps = new ProfileMaps();
-            var zoom = {% if HURUMAP.map_zoom %}{{ HURUMAP.map_zoom }}{% else %}null{% endif %};
-
+    <script>
+        $(function(){
+            // Selected COUNTRY
             var COUNTRY = {{ geography.this|jsonify|safe }};
-            var centre = {
-                'country-KE': [-0.0236, 37.9062],
-                'country-ZA': [-30.5595, 22.9375],
-                'country-TZ': [-6.3690, 34.8888],
-                'country-NG': [9.0820, 8.6753],
-            }
-
-            maps.drawMapForHomepage('{{ geo_data.first_child_level }}', '{{ HURUMAP.default_geo_version }}', centre['{{ geography.this.full_geoid }}'], zoom);
+            maps.drawMapsForProfile(profileData.geography);
+        })
         </script>
-    {% endblock %}
-  {% endblock %}
 {% endblock %}
