--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -345,3 +345,12 @@ span.img-bg {
     }
 }
 
+//wazimap conflicts with search
+input[type="text"] {
+  border: 0;
+  background: none;
+}
+
+::selection {
+  background: none;
+}
