[dominion] fix portal chooser routes + background

--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -19,6 +19,11 @@ a {
     color: #e7e452;
 }
 
+body {
+    padding-top: 0 !important;
+    background-image: url(/static/img/background.png)
+}
+
 // Heading font
 h1 {
   font-size: 3em;
@@ -31,9 +36,6 @@ h1, h2, h3 {
 // Re-usable classes
 
 // Colors
-body {
-  padding-top: 0 !important;
-}
 .text-white {
   color: #fff;
 }
