[dominion] refactor header

--- a/dominion/templates/country_page.html
+++ b/dominion/templates/country_page.html
@@ -10,10 +10,9 @@ Compare places using tables and maps, download data, and embed charts on your si
 {% endblock %}
 
 {% block header %}
-    {% include 'blocks/header.html' %}
+    {% include 'blocks/countrypage_header.html' %}
 {% endblock header %}
 {% block content_container %}
-  <div id="dominionCountryHero"></div>
   <div id="dominionCountryAbout"></div>
   <div id="dominionHowItWorks"></div>
   <div id="dominionVideo"></div>
