--- a/dominion/templates/homepage.html
+++ b/dominion/templates/homepage.html
@@ -5,11 +5,10 @@ data about land ownership in South Africa. Compare places using tables and maps,
 download data, and embed charts on your site.{% endblock %}
 
 {% block header %}
-    {% include 'blocks/header.html' %}
+    {% include 'blocks/homepage_header.html' %}
 {% endblock header %}
 
 {% block content_container %}
-  <div id="dominionHomeHero"></div>
   {% include 'blocks/showcase.html' %}
   <div id="dominionVideo"></div>
   <div id="dominionData"></div>
