--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -9,7 +9,7 @@
 
 {% block profile_detail %}
   <div id="profile-detail">
-    <div id="dominionProfileNavigation" />
+    <div id="dominionProfileTabs" />
 
     {% block profile_detail_contents %}
     {% endblock %}
