[Dominion] Country Page Hero (#148)
* initial country hero

* [dominion] show map

* [dominion] center to country + fix styling for large screens

* [dominion] position map below in mobile

* [dominion] off-yellow a tag

* [dominion] pass selected country to react

* [dominion] title country name

* [dominion] fix styling

* [dominion] use profile_detail maps

* [dominion] move to country page

* [dominion] country name in logo

* [dominion] style fixes for logo

* [dominion] align searchbar icon button mobile

* [dominion] fixed portal chooser mobile + search

* [dominion] fix portal chooser routes + background

* [dominion] fix header logo with country

* [dominion] restore homemap change + cleanup + minor positioning

* [dominion] fix zoom icon + find a place show search modal

* [dominion] dropdown fix + minor styling

* [dominion] delete unused

* [dominion] refactor header

* [dominion] unused

* add opacity to herodescription

* update use your current location text

* move background to header root

* [dominion] remove unnecessary background from django template

--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -15,6 +15,14 @@ $brand-color-solid-green: #279c94;
 $brand-color-gray: #b1b1b1;
 $font-raleway: 'Raleway', sans-serif;
 
+a {
+    color: #e7e452;
+}
+
+body {
+    padding-top: 0 !important;
+}
+
 // Heading font
 h1 {
   font-size: 3em;
@@ -27,9 +35,6 @@ h1, h2, h3 {
 // Re-usable classes
 
 // Colors
-body {
-  padding-top: 0 !important;
-}
 .text-white {
   color: #fff;
 }
@@ -321,6 +326,11 @@ span.img-bg {
   }
 }
 
+// Map Tooltip
+.map-tooltip {
+    background-color: $brand-color-gray
+}
+
 /* LAYOUT */
 
 #page-footer {
@@ -346,6 +356,10 @@ span.img-bg {
 }
 
 //wazimap conflicts with search
+input:focus {
+    box-shadow: unset;
+}
+
 input[type="text"] {
   border: 0;
   background: none;
@@ -353,4 +367,14 @@ input[type="text"] {
 
 ::selection {
   background: none;
+}
+
+// Map zoom
+.leaflet-control-zoom {
+    margin-bottom: 50px !important;
+}
+
+// Map attribution
+.leaflet-container a {
+    color: grey !important; 
 }
