[dominion] restore profile_detail

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -1,15 +1,46 @@
 {% extends 'profile/profile_detail.html' %} {% load humanize lookup staticfiles hashtospace %} {% load jsonify %}
 
-{% block header %}
-    {% include 'blocks/header.html' %}
-{% endblock header %}
 
-{% block content_container %}
-  <div id="dominionCountryHero"></div>
-{% endblock content_container %}
+{% block header_menu %}
+  <li><a href="/about">About</a></li>
+  <li><a href="/#showcase">Showcase</a></li>
+  <li class="social-icons">
+    <a href="https://twitter.com/{{ HURUMAP.twitter }}"><i
+        class="fa fa-twitter fa-lg fa-fw"></i></a>
+    <a href="https://facebook.com/{{ HURUMAP.facebook }}"><i
+        class="fa fa-facebook fa-lg fa-fw"></i></a>
+  </li>
+{% endblock header_menu %}
+
+
+{% block secondary_nav %}
+  <div class="floating-nav-wrapper" id="sticky-nav">
+    <nav class="floating-nav affix-top" data-spy="affix" data-offset-top="197">
+      <div class="wrapper clearfix">
+        <div class="geography-ico">
+              <span><img
+                  src="{% static 'img/icons/favicon.ico' %}">{{ geography.this.name }}
+              </span>
+        </div>
+        <ul>
+          <li><a href="#agricultural-land-sales"><i class="fa fa-money"></i>
+            <span>Agricultural Land Sales</span></a></li>
+          <li>
+            <a href="#agricultural-land-sales-colour"><i class="fa fa-user"></i>
+              <span>Land Traded for Transactions of Colour</span></a></li>
+          <li><a href="#redistribution-restitution"><i class="fa fa-check"></i>
+            <span> Land Redistribution and Restitution</span></a></li>
+          <li><a href="#farm-land"><i class="fa fa-leaf"></i>
+            <span>Farm Land</span></a></li>
+          <li><a href="#erven-land"><i class="fa fa-building"></i>
+            <span>Erven & Urban Land</span></a></li>
+          <li><a href="#sectional-title-land"><i class="fa fa-bolt"></i>
+            <span>Sectional Title Land</span></a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+{% endblock %}
+
 
 {% block profile_detail %}
-
-  {% include 'settings_js.html' %}
-  
-{% endblock %}
