move selected country in settings_js html file + change block for country page

--- a/dominion/templates/country_page.html
+++ b/dominion/templates/country_page.html
@@ -21,15 +21,12 @@ Compare places using tables and maps, download data, and embed charts on your si
   {% include 'blocks/partners.html' %}
 {% endblock content_container %}
 
-{% block body_javascript_extra %}
+{% block homepage_javascripb_libs %}
     {{ block.super }}
     <script>
-        var selected_country = {{ country|jsonify|safe }};
-
-        $(function() {
-            var maps = new ProfileMaps();
-            var zoom = {{country.zoom}};
-            maps.drawMapForCountryPage({{ geography|jsonify|safe }}, {{country.centre}}, zoom);
-        })
+        var maps = new ProfileMaps();
+        var zoom = {{country.zoom}};
+        maps.drawMapForCountryPage({{ geography.this |jsonify|safe }}, {{country.centre}}, zoom);
     </script>
+
 {% endblock %}
